Refactor JsonSerializableAddressBook class